--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dev = [
     "pytest>=7.4.0",
     "python-Levenshtein>=0.21.0",
     "mkdocs-material>=9.0.0",
+    "mypy>=1.0.0",
 ]
 
 [tool.pytest.ini_options]
