--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,8 +2,18 @@
   "name": "Fake Comp Bio Project",
   "dockerFile": "Dockerfile",
   "mounts": [
-    "source=${localWorkspaceFolder},target=/workspace,type=bind"
+    "source=${localWorkspaceFolder},target=/workspace,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,readonly",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/.credentials.json,target=/home/vscode/.claude/.credentials.json,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/settings.json,target=/home/vscode/.claude/settings.json,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/settings.local.json,target=/home/vscode/.claude/settings.local.json,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/commands,target=/home/vscode/.claude/commands,type=bind",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/statsig,target=/home/vscode/.claude/statsig,type=bind"
   ],
+  "remoteEnv": {
+    "SSH_AUTH_SOCK": "${localEnv:SSH_AUTH_SOCK}",
+    "GH_TOKEN": "${localEnv:GH_TOKEN}"
+  },
   "workspaceFolder": "/workspace",
   "postCreateCommand": "/usr/local/bin/post-create.sh",
   "customizations": {
