--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,15 +3,13 @@
   "dockerFile": "Dockerfile",
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind",
-    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,readonly",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/.credentials.json,target=/home/vscode/.claude/.credentials.json,type=bind",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/settings.json,target=/home/vscode/.claude/settings.json,type=bind",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/settings.local.json,target=/home/vscode/.claude/settings.local.json,type=bind",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/statsig,target=/home/vscode/.claude/statsig,type=bind"
   ],
   "remoteEnv": {
-    "SSH_AUTH_SOCK": "${localEnv:SSH_AUTH_SOCK}",
-    "GH_TOKEN": "${localEnv:GH_TOKEN}"
+    "SSH_AUTH_SOCK": "${localEnv:SSH_AUTH_SOCK}"
   },
   "workspaceFolder": "/workspace",
   "forwardPorts": [8000],
