--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,10 +6,11 @@
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/.credentials.json,target=/home/vscode/.claude/.credentials.json,type=bind",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/settings.json,target=/home/vscode/.claude/settings.json,type=bind",
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/settings.local.json,target=/home/vscode/.claude/settings.local.json,type=bind",
-    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/statsig,target=/home/vscode/.claude/statsig,type=bind"
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.claude/statsig,target=/home/vscode/.claude/statsig,type=bind",
+    "source=/run/host-services/ssh-auth.sock,target=/run/host-services/ssh-auth.sock,type=bind"
   ],
-  "remoteEnv": {
-    "SSH_AUTH_SOCK": "${localEnv:SSH_AUTH_SOCK}"
+  "containerEnv": {
+    "SSH_AUTH_SOCK": "/run/host-services/ssh-auth.sock"
   },
   "workspaceFolder": "/workspace",
   "forwardPorts": [8000],
